syntax = "proto3";
option java_multiple_files = true;
package com.trendingGrpc;

service TrendingService {
  rpc getTop10Movies(TrendingRequest) returns (TrendingResponse);
}

message TrendingRequest {
}

message TrendingResponse {
  repeated string movieId = 1;
}
